seaqt/QtWidgets/gen_qaction.nim

import ./Qt5Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt5Widgets")  & " -fPIC"
{.compile("gen_qaction.cpp", cflags).}


type QActionMenuRoleEnum* = distinct cint
template NoRole*(_: type QActionMenuRoleEnum): untyped = 0
template TextHeuristicRole*(_: type QActionMenuRoleEnum): untyped = 1
template ApplicationSpecificRole*(_: type QActionMenuRoleEnum): untyped = 2
template AboutQtRole*(_: type QActionMenuRoleEnum): untyped = 3
template AboutRole*(_: type QActionMenuRoleEnum): untyped = 4
template PreferencesRole*(_: type QActionMenuRoleEnum): untyped = 5
template QuitRole*(_: type QActionMenuRoleEnum): untyped = 6


type QActionPriorityEnum* = distinct cint
template LowPriority*(_: type QActionPriorityEnum): untyped = 0
template NormalPriority*(_: type QActionPriorityEnum): untyped = 128
template HighPriority*(_: type QActionPriorityEnum): untyped = 256


type QActionActionEventEnum* = distinct cint
template Trigger*(_: type QActionActionEventEnum): untyped = 0
template Hover*(_: type QActionActionEventEnum): untyped = 1


import ./gen_qaction_types
export gen_qaction_types

import
  ../QtCore/gen_qcoreevent_types,
  ../QtCore/gen_qmetaobject_types,
  ../QtCore/gen_qobject,
  ../QtCore/gen_qobjectdefs_types,
  ../QtCore/gen_qvariant_types,
  ../QtGui/gen_qfont_types,
  ../QtGui/gen_qicon_types,
  ../QtGui/gen_qkeysequence_types,
  ./gen_qactiongroup_types,
  ./gen_qgraphicswidget_types,
  ./gen_qmenu_types,
  ./gen_qwidget_types
export
  gen_qcoreevent_types,
  gen_qmetaobject_types,
  gen_qobject,
  gen_qobjectdefs_types,
  gen_qvariant_types,
  gen_qfont_types,
  gen_qicon_types,
  gen_qkeysequence_types,
  gen_qactiongroup_types,
  gen_qgraphicswidget_types,
  gen_qmenu_types,
  gen_qwidget_types

type cQAction*{.exportc: "QAction", incompleteStruct.} = object

proc fcQAction_new(): ptr cQAction {.importc: "QAction_new".}
proc fcQAction_new2(text: struct_miqt_string): ptr cQAction {.importc: "QAction_new2".}
proc fcQAction_new3(icon: pointer, text: struct_miqt_string): ptr cQAction {.importc: "QAction_new3".}
proc fcQAction_new4(parent: pointer): ptr cQAction {.importc: "QAction_new4".}
proc fcQAction_new5(text: struct_miqt_string, parent: pointer): ptr cQAction {.importc: "QAction_new5".}
proc fcQAction_new6(icon: pointer, text: struct_miqt_string, parent: pointer): ptr cQAction {.importc: "QAction_new6".}
proc fcQAction_metaObject(self: pointer, ): pointer {.importc: "QAction_metaObject".}
proc fcQAction_metacast(self: pointer, param1: cstring): pointer {.importc: "QAction_metacast".}
proc fcQAction_tr(s: cstring): struct_miqt_string {.importc: "QAction_tr".}
proc fcQAction_trUtf8(s: cstring): struct_miqt_string {.importc: "QAction_trUtf8".}
proc fcQAction_setActionGroup(self: pointer, group: pointer): void {.importc: "QAction_setActionGroup".}
proc fcQAction_actionGroup(self: pointer, ): pointer {.importc: "QAction_actionGroup".}
proc fcQAction_setIcon(self: pointer, icon: pointer): void {.importc: "QAction_setIcon".}
proc fcQAction_icon(self: pointer, ): pointer {.importc: "QAction_icon".}
proc fcQAction_setText(self: pointer, text: struct_miqt_string): void {.importc: "QAction_setText".}
proc fcQAction_text(self: pointer, ): struct_miqt_string {.importc: "QAction_text".}
proc fcQAction_setIconText(self: pointer, text: struct_miqt_string): void {.importc: "QAction_setIconText".}
proc fcQAction_iconText(self: pointer, ): struct_miqt_string {.importc: "QAction_iconText".}
proc fcQAction_setToolTip(self: pointer, tip: struct_miqt_string): void {.importc: "QAction_setToolTip".}
proc fcQAction_toolTip(self: pointer, ): struct_miqt_string {.importc: "QAction_toolTip".}
proc fcQAction_setStatusTip(self: pointer, statusTip: struct_miqt_string): void {.importc: "QAction_setStatusTip".}
proc fcQAction_statusTip(self: pointer, ): struct_miqt_string {.importc: "QAction_statusTip".}
proc fcQAction_setWhatsThis(self: pointer, what: struct_miqt_string): void {.importc: "QAction_setWhatsThis".}
proc fcQAction_whatsThis(self: pointer, ): struct_miqt_string {.importc: "QAction_whatsThis".}
proc fcQAction_setPriority(self: pointer, priority: cint): void {.importc: "QAction_setPriority".}
proc fcQAction_priority(self: pointer, ): cint {.importc: "QAction_priority".}
proc fcQAction_menu(self: pointer, ): pointer {.importc: "QAction_menu".}
proc fcQAction_setMenu(self: pointer, menu: pointer): void {.importc: "QAction_setMenu".}
proc fcQAction_setSeparator(self: pointer, b: bool): void {.importc: "QAction_setSeparator".}
proc fcQAction_isSeparator(self: pointer, ): bool {.importc: "QAction_isSeparator".}
proc fcQAction_setShortcut(self: pointer, shortcut: pointer): void {.importc: "QAction_setShortcut".}
proc fcQAction_shortcut(self: pointer, ): pointer {.importc: "QAction_shortcut".}
proc fcQAction_setShortcuts(self: pointer, shortcuts: struct_miqt_array): void {.importc: "QAction_setShortcuts".}
proc fcQAction_setShortcutsWithShortcuts(self: pointer, shortcuts: cint): void {.importc: "QAction_setShortcutsWithShortcuts".}
proc fcQAction_shortcuts(self: pointer, ): struct_miqt_array {.importc: "QAction_shortcuts".}
proc fcQAction_setShortcutContext(self: pointer, context: cint): void {.importc: "QAction_setShortcutContext".}
proc fcQAction_shortcutContext(self: pointer, ): cint {.importc: "QAction_shortcutContext".}
proc fcQAction_setAutoRepeat(self: pointer, autoRepeat: bool): void {.importc: "QAction_setAutoRepeat".}
proc fcQAction_autoRepeat(self: pointer, ): bool {.importc: "QAction_autoRepeat".}
proc fcQAction_setFont(self: pointer, font: pointer): void {.importc: "QAction_setFont".}
proc fcQAction_font(self: pointer, ): pointer {.importc: "QAction_font".}
proc fcQAction_setCheckable(self: pointer, checkable: bool): void {.importc: "QAction_setCheckable".}
proc fcQAction_isCheckable(self: pointer, ): bool {.importc: "QAction_isCheckable".}
proc fcQAction_data(self: pointer, ): pointer {.importc: "QAction_data".}
proc fcQAction_setData(self: pointer, varVal: pointer): void {.importc: "QAction_setData".}
proc fcQAction_isChecked(self: pointer, ): bool {.importc: "QAction_isChecked".}
proc fcQAction_isEnabled(self: pointer, ): bool {.importc: "QAction_isEnabled".}
proc fcQAction_isVisible(self: pointer, ): bool {.importc: "QAction_isVisible".}
proc fcQAction_activate(self: pointer, event: cint): void {.importc: "QAction_activate".}
proc fcQAction_showStatusText(self: pointer, ): bool {.importc: "QAction_showStatusText".}
proc fcQAction_setMenuRole(self: pointer, menuRole: cint): void {.importc: "QAction_setMenuRole".}
proc fcQAction_menuRole(self: pointer, ): cint {.importc: "QAction_menuRole".}
proc fcQAction_setIconVisibleInMenu(self: pointer, visible: bool): void {.importc: "QAction_setIconVisibleInMenu".}
proc fcQAction_isIconVisibleInMenu(self: pointer, ): bool {.importc: "QAction_isIconVisibleInMenu".}
proc fcQAction_setShortcutVisibleInContextMenu(self: pointer, show: bool): void {.importc: "QAction_setShortcutVisibleInContextMenu".}
proc fcQAction_isShortcutVisibleInContextMenu(self: pointer, ): bool {.importc: "QAction_isShortcutVisibleInContextMenu".}
proc fcQAction_parentWidget(self: pointer, ): pointer {.importc: "QAction_parentWidget".}
proc fcQAction_associatedWidgets(self: pointer, ): struct_miqt_array {.importc: "QAction_associatedWidgets".}
proc fcQAction_associatedGraphicsWidgets(self: pointer, ): struct_miqt_array {.importc: "QAction_associatedGraphicsWidgets".}
proc fcQAction_trigger(self: pointer, ): void {.importc: "QAction_trigger".}
proc fcQAction_hover(self: pointer, ): void {.importc: "QAction_hover".}
proc fcQAction_setChecked(self: pointer, checked: bool): void {.importc: "QAction_setChecked".}
proc fcQAction_toggle(self: pointer, ): void {.importc: "QAction_toggle".}
proc fcQAction_setEnabled(self: pointer, enabled: bool): void {.importc: "QAction_setEnabled".}
proc fcQAction_setDisabled(self: pointer, b: bool): void {.importc: "QAction_setDisabled".}
proc fcQAction_setVisible(self: pointer, visible: bool): void {.importc: "QAction_setVisible".}
proc fcQAction_changed(self: pointer, ): void {.importc: "QAction_changed".}
proc fcQAction_connect_changed(self: pointer, slot: int) {.importc: "QAction_connect_changed".}
proc fcQAction_triggered(self: pointer, ): void {.importc: "QAction_triggered".}
proc fcQAction_connect_triggered(self: pointer, slot: int) {.importc: "QAction_connect_triggered".}
proc fcQAction_hovered(self: pointer, ): void {.importc: "QAction_hovered".}
proc fcQAction_connect_hovered(self: pointer, slot: int) {.importc: "QAction_connect_hovered".}
proc fcQAction_toggled(self: pointer, param1: bool): void {.importc: "QAction_toggled".}
proc fcQAction_connect_toggled(self: pointer, slot: int) {.importc: "QAction_connect_toggled".}
proc fcQAction_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QAction_tr2".}
proc fcQAction_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAction_tr3".}
proc fcQAction_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QAction_trUtf82".}
proc fcQAction_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAction_trUtf83".}
proc fcQAction_showStatusText1(self: pointer, widget: pointer): bool {.importc: "QAction_showStatusText1".}
proc fcQAction_triggered1(self: pointer, checked: bool): void {.importc: "QAction_triggered1".}
proc fcQAction_connect_triggered1(self: pointer, slot: int) {.importc: "QAction_connect_triggered1".}
proc fQAction_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QAction_virtualbase_event".}
proc fcQAction_override_virtual_event(self: pointer, slot: int) {.importc: "QAction_override_virtual_event".}
proc fQAction_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QAction_virtualbase_eventFilter".}
proc fcQAction_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QAction_override_virtual_eventFilter".}
proc fQAction_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QAction_virtualbase_timerEvent".}
proc fcQAction_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QAction_override_virtual_timerEvent".}
proc fQAction_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QAction_virtualbase_childEvent".}
proc fcQAction_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QAction_override_virtual_childEvent".}
proc fQAction_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QAction_virtualbase_customEvent".}
proc fcQAction_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QAction_override_virtual_customEvent".}
proc fQAction_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QAction_virtualbase_connectNotify".}
proc fcQAction_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QAction_override_virtual_connectNotify".}
proc fQAction_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QAction_virtualbase_disconnectNotify".}
proc fcQAction_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QAction_override_virtual_disconnectNotify".}
proc fcQAction_delete(self: pointer) {.importc: "QAction_delete".}

